--- a/package.json
+++ b/package.json
@@ -16,6 +16,17 @@
     "angular",
     "chat"
   ],
+  "dependencies": {
+    "@angular/animations": "^5.2.8",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/router": "^5.2.0"
+  },
   "author": "wasteCleaner",
   "license": "ISC",
   "bugs": {
