--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "ngx-chat",
   "version": "0.0.3",
   "description": "Chat for getting contacts",
-  "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build --prod",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "buildpkg": "ng-packagr -p package.json"
   },
   "repository": {
     "type": "git",
@@ -25,12 +31,41 @@
     "@angular/http": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0"
+    "@angular/router": "^5.2.0",
+    "core-js": "^2.4.1",
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.19",
+    "tslib": "^1.7.1"
+  },
+  "devDependencies": {
+    "@angular/cli": "~1.7.0",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/language-service": "^5.2.0",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "^4.0.1",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^2.2.0",
+    "protractor": "~5.1.2",
+    "ts-node": "~4.1.0",
+    "tslint": "~5.9.1",
+    "typescript": "~2.5.3"
   },
   "author": "wasteCleaner",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/wasteCleaner/ngx-chat/issues"
   },
-  "homepage": "https://github.com/wasteCleaner/ngx-chat#readme"
+  "homepage": "https://github.com/wasteCleaner/ngx-chat#readme",
+  "main": "bundles/chat-site.umd.js",
+  "module": "esm5/chat-site.js",
+  "es2015": "esm2015/chat-site.js",
+  "typings": "chat-site.d.ts",
+  "metadata": "chat-site.metadata.json"
 }
